--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,23 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
-		<dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.7</version>
+        </dependency>
+
+        <dependency>
 			<groupId>com.github.Grover-c13</groupId>
 			<artifactId>PokeGOAPI-Java</artifactId>
-			<version>0.2</version>
+			<version>b00f01c</version>
 		</dependency>
 
 		<dependency>
