--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,19 @@
             <version>2.7</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
+
         <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>0.1.15</version>
+        </dependency>
+
+		<dependency>
 			<groupId>com.github.Grover-c13</groupId>
 			<artifactId>PokeGOAPI-Java</artifactId>
 			<version>6cec95d</version>
