add spring boot add web module add css\js add map add draggble marker to map add geolocation to map

--- a/src/main/resources/appconfig.json.sample
+++ b/src/main/resources/appconfig.json.sample
@@ -3,6 +3,6 @@
   "password": "gpassword",
   "location": "coords or regular address",
   "gmapkey": "key for gmaps",
-  "auth": "google or ptc",
+  "auth": "GOOGLE or PTC",
   "walkSpeed": 4.16
 }
